tests/parser/argument_validation/test_30.m.octave.out
In test_30.m, line 4
|     arguments
|     ^^^^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_30.m, line 5
|         a {mustBeA(a,'double'), mustBeDims(a,2)}
|           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_30.m, line 6
|         b {mustBeSize(b,[5,3])}
|           ^^^^^^^^^^^^^^^^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_30.m, line 10
| end
| ^^^ error: expected end of file, found KEYWORD instead
MISS_HIT Debug Summary: 1 file(s) analysed, 3 style issue(s), 1 error(s)
